--- a/index.html
+++ b/index.html
@@ -1,3 +1,96 @@
-<html>
-  <h1>Suraj Patidar</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Suraj Patidar | Portfolio</title>
+  <meta name="description" content="Portfolio of Suraj Patidar, a Python Senior Software Developer." />
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    header, footer {
+      background-color: #222;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    main {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    section {
+      margin-bottom: 40px;
+    }
+
+    h1, h2 {
+      color: #2c3e50;
+    }
+
+    a {
+      color: #007acc;
+      text-decoration: none;
+    }
+
+    .project {
+      border: 1px solid #ddd;
+      padding: 15px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+      background-color: #fff;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Suraj Patidar</h1>
+    <p>Senior Python Developer | Django Expert | API & Backend Architect</p>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>
+        I'm Suraj Patidar, a senior software developer with strong expertise in Python, Django, REST APIs, and real-world problem solving. I build scalable systems, automate complex workflows, and love turning ideas into practical tools.
+      </p>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>Berth Booking & Management System</h3>
+        <p>A marina management tool handling berth bookings, invoicing, recurring billing, and soft deletion.</p>
+        <a href="https://github.com/yourusername/berth-system" target="_blank">View on GitHub</a>
+      </div>
+      <div class="project">
+        <h3>HashID Django Integration</h3>
+        <p>Built HashID support for Django-based APIs for secure, obfuscated ID sharing.</p>
+        <a href="https://github.com/yourusername/hashid-django-api" target="_blank">View on GitHub</a>
+      </div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>
+        📧 Email: <a href="mailto:suraj@example.com">suraj@example.com</a><br>
+        💼 LinkedIn: <a href="https://linkedin.com/in/surajpatidar" target="_blank">linkedin.com/in/surajpatidar</a><br>
+        💻 GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a>
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Suraj Patidar. All rights reserved.</p>
+  </footer>
+
+</body>
 </html>
